# pyvisfile

./: .gitattributes  .gitignore  .gitlab-ci.yml  CITATION.cff  LICENSE  MANIFEST.in  README.rst  aksetup_helper.py  configvars.py  import-silo.sh  meson.build  meson_options.txt  pyproject.toml  setup.cfg  setup.py  siteconf.py.in
.basedpyright/: baseline.json
.ci/: install-silo-on-github.sh
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
doc/: Makefile  conf.py  faq.rst  index.rst  installing.rst  reference.rst  silo.rst  upload-docs.sh  vtk.rst  xdmf.rst
examples/: multimesh_rowmajor.py  quadmesh.py  read-qmesh.py  silo-unstructured.py  vtk-sample-elements.py  vtk-structured-2d-curved.py  vtk-structured-2d-plain.py  vtk-structured-2d.py  vtk-structured.py  vtk-unstructured-points.py
pylo/: __init__.py
pyvisfile/: __init__.py
pyvisfile/silo/: __init__.py
pyvisfile/vtk/: __init__.py  vtk_ordering.py
pyvisfile/xdmf/: __init__.py
src/python/: __init__.py
src/wrapper/: wrap_silo.cpp
test/: ref-vtk-parallel.pvtu  test_silo.py  test_vtk.py  test_xdmf.py
