[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=63",
]

[project]
name = "pyvisfile"
version = "2024.1"
description = "Large-scale Visualization Data Storage"
readme = "README.rst"
license = { text = "MIT" }
authors = [ { name = "Andreas Kloeckner", email = "inform@tiker.net" } ]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "numpy",
    "pytools>=2022.1",
]

[project.optional-dependencies]
doc = [
    "furo",
    "sphinx>=4",
    "sphinx-copybutton",
]
test = [
    "mypy",
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
include = [
    "pyvisfile*",
]

[project.urls]
Documentation = "https://documen.tician.de/pyvisfile"
Homepage = "https://mathema.tician.de/software/pyvisfile"
Repository = "https://github.com/inducer/pyvisfile"

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = [
    "B",    # flake8-bugbear
    "C",    # flake8-comprehensions
    "E",    # pycodestyle
    "F",    # pyflakes
    "G",    # flake8-logging-format
    "N",    # pep8-naming
    "Q",    # flake8-quotes
    "RUF",  # ruff
    "UP",   # pyupgrade
    "W",    # pycodestyle
]
extend-ignore = [
    "B028", # no explicit stacklevel in warnings
    "C90",  # McCabe complexity
    "E226", # missing whitespace around arithmetic operator
    "E241", # multiple spaces after comma
    "E242", # tab after comma
    "E265", # comment should have a space
    "E402", # module level import not at the top of file
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["pytools"]
known-local-folder = ["pyfmmlib"]
lines-after-imports = 2
combine-as-imports = true

[tool.mypy]
python_version = "3.8"
warn_unused_ignores = true
