[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyvisfile"
version = "2024.2"
description = "Large-scale Visualization Data Storage"
readme = "README.rst"
license = "MIT"
authors = [ { name = "Andreas Kloeckner", email = "inform@tiker.net" } ]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: C++",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "numpy",
    "pytools>=2022.1",
    "typing_extensions>=4.6"
]

[project.optional-dependencies]
doc = [
    "furo",
    "sphinx>=4",
    "sphinx-copybutton",
]
test = [
    "mypy",
    "pytest",
    "ruff",
]

[project.urls]
Documentation = "https://documen.tician.de/pyvisfile"
Homepage = "https://mathema.tician.de/software/pyvisfile"
Repository = "https://github.com/inducer/pyvisfile"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.git*",
  "/doc/_build",
  "/.editorconfig",
  "/run-*.sh",
  "/.basedpyright",
]

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = [
    "B",    # flake8-bugbear
    "C",    # flake8-comprehensions
    "E",    # pycodestyle
    "F",    # pyflakes
    "G",    # flake8-logging-format
    "I",    # flake8-isort
    "N",    # pep8-naming
    "NPY",  # numpy
    "Q",    # flake8-quotes
    "RUF",  # ruff
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking
    "UP",   # pyupgrade
    "W",    # pycodestyle
]
extend-ignore = [
    "B028",   # no explicit stacklevel in warnings
    "C90",    # McCabe complexity
    "E226",   # missing whitespace around arithmetic operator
    "E241",   # multiple spaces after comma
    "E242",   # tab after comma
    "E265",   # comment should have a space
    "E402",   # module level import not at the top of file
    "RUF067", # no code in __init__ *shrug*
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["pytools"]
known-local-folder = ["pyvisfile"]
lines-after-imports = 2
combine-as-imports = true
required-imports = ["from __future__ import annotations"]

[tool.typos.default]
extend-ignore-re = [
  "(?Rm)^.*(#|//)\\s*spellchecker:\\s*disable-line$"
]

[tool.basedpyright]
reportImplicitStringConcatenation = "none"
reportUnnecessaryIsInstance = "none"
reportUnusedCallResult = "none"
reportExplicitAny = "none"
reportPrivateUsage = "none"

# Multiple reasons for this:
# - make_subst_func is reported as having an incomplete type (but only in CI?)
# - numpy scalar types are reported as incomplete (because of "any" precision)
reportUnknownVariableType = "none"

reportUnreachable = "hint"
reportUnnecessaryComparison = "hint"

# This reports even cycles that are qualified by 'if TYPE_CHECKING'. Not what
# we care about at this moment.
# https://github.com/microsoft/pyright/issues/746
reportImportCycles = "none"

pythonVersion = "3.10"
pythonPlatform = "All"

exclude = [
    "doc",
    ".env",
    ".conda-root",
    "examples",
]

[[tool.basedpyright.executionEnvironments]]
root = "test"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "hint"
reportMissingParameterType = "none"
reportAttributeAccessIssue = "none"
reportMissingImports = "none"
reportArgumentType = "hint"
reportAny = "hint"
